--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "scripts": {
     "test": "mocha \"test/**/*.js\"",
+    "test:file": "mocha",
     "coverage": "c8 mocha \"test/**/*.js\""
   },
   "repository": {
